[metadata]
name = simple-http-server
version = 0.1.0
description = A simple HTTP server using Python's built-in http module.
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    health_check = health_check.server:run
