[metadata]
name = health_check
version = 0.1.0
description = A simple health check HTTP server using Python's built-in http module.
author = Pratik Chavan
author_email = pchavan1996@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    health_check = health_check.server:run
